# breakfast-tales

./: .gitignore  Makefile  README.md  pyproject.toml
breakfast_tales/: app.py  db.py  models.py  parsers.py
breakfast_tales/static/: styles.css
breakfast_tales/templates/: feed.html  header.html  main.html
