[tool.poetry]
name = "breakfast-tales"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "breakfast_tales"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
requests = "^2.31.0"
fake-useragent = "^1.1.3"
feedparser = "^6.0.10"
bs4 = "^0.0.1"
lxml = "^4.9.2"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
